data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3111.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\90\80\80\80\00\01\07\6d\6f\64\75\6c\65"
    "\41\04\66\75\6e\63\00\00\03\82\80\80\80\00\01\00"
    "\07\91\80\80\80\00\01\0d\65\78\70\6f\72\74\65\64"
    "\5f\66\75\6e\63\00\01\0a\8b\80\80\80\00\01\85\80"
    "\80\80\00\00\10\00\0f\0b"
  )
""
)